--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
     <string name="service_title">Mobile Apps </string>
     <string name="menu_refresh">Refresh</string>
     <string name="checkbox_text">Item Text</string>
+    <string name="coach_profile">Coach Profile</string>
+    <string name="todo">TODO</string>
+    <string name="lastname">Lastname</string>
 
 </resources>
